infra/k8s/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: veo-ingress
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
spec:
  rules:
    - host: api.veo.pe
      http:
        paths:
          - path: /passenger
            pathType: Prefix
            backend: { service: { name: public-bff, port: { number: 80 } } }
          - path: /driver
            pathType: Prefix
            backend: { service: { name: driver-bff, port: { number: 80 } } }
          - path: /admin
            pathType: Prefix
            backend: { service: { name: admin-bff, port: { number: 80 } } }
    - host: admin.veo.pe
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: admin-web, port: { number: 80 } } }
    - host: ver.veo.pe
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: family-web, port: { number: 80 } } }
